Various minor fixes uncovered by Twist integration

--- a/examples/button/src/alternate-branding.less
+++ b/examples/button/src/alternate-branding.less
@@ -1,10 +1,10 @@
 @primary-color: #dd4b39;
-@primary-color-lighter: lighter(#dd4b39, 0.1);
-@primary-color-darker: darker(#dd4b39, 0.1);
+@primary-color-lighter: lighten(#dd4b39, 10%);
+@primary-color-darker: darken(#dd4b39, 10%);
 
 .alternate-branding {
     // alternate button styles
-    & > .button {
+    & > .reactist.button {
         background-color: @primary-color;
 
         &:not(.loading):not(.secondary):not(.white):not([disabled]):hover {
